# hopfield-network

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
experiments/: memory.py
notebooks/: xavier_louna.ipynb
results/: visuals.py
src/: timer_wrapper.py
src/hopfield/: corrupt.py  network.py
src/hopfield/analysis/: energy.py  hamming.py  landscape.py  overlap.py  plot_energy.py  recovery.py  robustness.py  stability.py
src/hopfield/data/: fashionMNIST_15_28x28_pm1_flat.npy  fashionMNIST_2000_28x28_pm1.npy  fashionMNIST_2000_784_pm1_flat.npy  image1_100x100_matrix.txt  image2_100x100_matrix.txt  images.py  jpg2matrix.py
src/hopfield/data_test/: image3_100x100_matrix.txt  images.py
src/hopfield/learning/: hebb.py  perceptron.py
src/hopfield/update/: asynchronous.py  synchronous.py  syncrhonous.py
src/hopfield/utils/: energy.py  hamming.py  recovery.py
