[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hopfield-network"
version = "0.1.0"
description = "Hopfield network project for PHY3075"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "pillow",
    "numba",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]